# HPC-Project

./: .gitignore
Project-A/: CMakeLists.txt  README.txt  run_rotate.ps1
Project-A/include/: cuda_check.h  geom.h  rotate.h  types.h
Project-A/results/: rotate_benchmark.txt
Project-A/src/: geom.cpp  main.cu  rotate.cu
